Fixed styling on mobile

--- a/site/pages/styles/index.scss
+++ b/site/pages/styles/index.scss
@@ -14,7 +14,7 @@
 @import 'pages/schedule';
 @import 'pages/space';
 
-*, *:before, *:after {
+*, *::before, *::after {
   box-sizing: border-box;
 }
 
