--- a/site/pages/styles/ubacm/_footer.scss
+++ b/site/pages/styles/ubacm/_footer.scss
@@ -19,7 +19,7 @@
 
     .logo_wide {
       display: inline-block;
-      width: 160px;
+      width: 140px;
       height: auto;
       margin-right: $space;
     }
